projects/editor/assets/styles/styles.scss
@use 'sass:map';
@use '@angular/material' as mat;
@use '@material/textfield';

@import 'codemirror/lib/codemirror';
@import 'codemirror/theme/elegant';
@import 'codemirror/addon/fold/foldgutter';

.CodeMirror {
    border-radius: 4px;
}

.CodeMirror-foldmarker {
    color: black;
    text-shadow: none;
}

.editor-mat {
    // Reduce form-field size
    // Workaround for bug - https://github.com/angular/components/issues/26579
    textfield.$minimum-height-for-filled-label: 10px;
    @include mat.form-field-density(-2);

    $typography: mat.define-typography-config();
    $typography: map.set($typography, body-1, font-size, 14px);
    @include mat.all-component-typographies($typography);

    .mat-form-field-appearance-outline {
        .mat-mdc-text-field-wrapper {
            padding: 0 8px;
        }

        .mat-mdc-form-field-infix {
            padding: 0.4em 0 !important;
            min-height: 0;
            line-height: 1;
        }
    }

    .mat-button-toggle-group {
        .mat-button-toggle {
            flex-basis: 50%;
            min-width: 120px;
        }

        .mat-button-toggle-label-content {
            line-height: 32px !important;
        }

        .mat-icon {
            margin-right: 4px;
        }
    }

    @include mat.icon-button-density(-4);
    .mat-mdc-icon-button {
        line-height: normal;
    }

    .mat-mdc-option,
    .mat-mdc-menu-item {
        min-height: 40px;
    }
}

formly-field {
    display: block;
}

.editor-resizing {
    transition: none !important;
}

.tree-container {
    min-width: max-content;
    padding: 8px;
    box-sizing: border-box;
}

.tree-item {
    display: block;
    user-select: none;
}

.property-field {
    flex-grow: 1;
}

.cursor-pointer {
    cursor: pointer;
}

.expand-icon {
    color: rgba(0, 0, 0, 0.54);
    transition: transform 0.2s ease-out;
}

.expand-icon.expanded-90 {
    transform: rotate(90deg);
}

.expand-icon.expanded-180 {
    transform: rotate(-180deg);
}

.dialogBackdrop {
    background-color: white;
    opacity: 0.6 !important;
}

.editor-action-buttons {
    display: inline-flex;
    align-items: center;
    column-gap: 16px;
}

[hidden] {
    display: none !important;
}

